--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "deploy": "next build && next export"
   },
   "dependencies": {
+    "@shopify/shopify-api": "^8.0.1",
+    "autoprefixer": "^10.4.16",
+    "docx": "^9.1.0",
+    "idb": "^7.1.1",
     "next": "14.0.4",
+    "next-pwa": "^5.6.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-pwa": "^5.6.0",
-    "@shopify/shopify-api": "^8.0.1",
-    "idb": "^7.1.1",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5.3.3"
   }
 }
